tests/baselines/reference/typeParameterDiamond3.errors.txt
tests/cases/compiler/typeParameterDiamond3.ts(8,13): error TS2322: Type 'T | U' is not assignable to type 'Top'.
  'T | U' is assignable to the constraint of type 'Top', but 'Top' could be instantiated with a different subtype of constraint '{}'.
    Type 'T' is not assignable to type 'Top'.
      'T' is assignable to the constraint of type 'Top', but 'Top' could be instantiated with a different subtype of constraint '{}'.
tests/cases/compiler/typeParameterDiamond3.ts(9,13): error TS2322: Type 'Bottom' is not assignable to type 'T | U'.
  Type 'Top | T | U' is not assignable to type 'T | U'.
    Type 'Top' is not assignable to type 'T | U'.
      Type 'Top' is not assignable to type 'U'.
        'Top' is assignable to the constraint of type 'U', but 'U' could be instantiated with a different subtype of constraint '{}'.
          Type 'Bottom' is not assignable to type 'U'.
            'Bottom' is assignable to the constraint of type 'U', but 'U' could be instantiated with a different subtype of constraint '{}'.
              Type 'Top | T | U' is not assignable to type 'U'.
                'Top | T | U' is assignable to the constraint of type 'U', but 'U' could be instantiated with a different subtype of constraint '{}'.
                  Type 'Top' is not assignable to type 'U'.
                    'Top' is assignable to the constraint of type 'U', but 'U' could be instantiated with a different subtype of constraint '{}'.
tests/cases/compiler/typeParameterDiamond3.ts(10,13): error TS2322: Type 'Bottom' is not assignable to type 'Top'.
  'Bottom' is assignable to the constraint of type 'Top', but 'Top' could be instantiated with a different subtype of constraint '{}'.
    Type 'Top | T | U' is not assignable to type 'Top'.
      'Top | T | U' is assignable to the constraint of type 'Top', but 'Top' could be instantiated with a different subtype of constraint '{}'.
        Type 'T' is not assignable to type 'Top'.
          'T' is assignable to the constraint of type 'Top', but 'Top' could be instantiated with a different subtype of constraint '{}'.


==== tests/cases/compiler/typeParameterDiamond3.ts (3 errors) ====
    function diamondTop<Top>() {
        function diamondMiddle<T, U>() {
            function diamondBottom<Bottom extends Top | T | U>() {
                var top: Top;
                var middle: T | U;
                var bottom: Bottom;
    
                top = middle;
                ~~~
!!! error TS2322: Type 'T | U' is not assignable to type 'Top'.
!!! error TS2322:   'T | U' is assignable to the constraint of type 'Top', but 'Top' could be instantiated with a different subtype of constraint '{}'.
!!! error TS2322:     Type 'T' is not assignable to type 'Top'.
!!! error TS2322:       'T' is assignable to the constraint of type 'Top', but 'Top' could be instantiated with a different subtype of constraint '{}'.
                middle = bottom;
                ~~~~~~
!!! error TS2322: Type 'Bottom' is not assignable to type 'T | U'.
!!! error TS2322:   Type 'Top | T | U' is not assignable to type 'T | U'.
!!! error TS2322:     Type 'Top' is not assignable to type 'T | U'.
!!! error TS2322:       Type 'Top' is not assignable to type 'U'.
!!! error TS2322:         'Top' is assignable to the constraint of type 'U', but 'U' could be instantiated with a different subtype of constraint '{}'.
!!! error TS2322:           Type 'Bottom' is not assignable to type 'U'.
!!! error TS2322:             'Bottom' is assignable to the constraint of type 'U', but 'U' could be instantiated with a different subtype of constraint '{}'.
!!! error TS2322:               Type 'Top | T | U' is not assignable to type 'U'.
!!! error TS2322:                 'Top | T | U' is assignable to the constraint of type 'U', but 'U' could be instantiated with a different subtype of constraint '{}'.
!!! error TS2322:                   Type 'Top' is not assignable to type 'U'.
!!! error TS2322:                     'Top' is assignable to the constraint of type 'U', but 'U' could be instantiated with a different subtype of constraint '{}'.
                top = bottom;
                ~~~
!!! error TS2322: Type 'Bottom' is not assignable to type 'Top'.
!!! error TS2322:   'Bottom' is assignable to the constraint of type 'Top', but 'Top' could be instantiated with a different subtype of constraint '{}'.
!!! error TS2322:     Type 'Top | T | U' is not assignable to type 'Top'.
!!! error TS2322:       'Top | T | U' is assignable to the constraint of type 'Top', but 'Top' could be instantiated with a different subtype of constraint '{}'.
!!! error TS2322:         Type 'T' is not assignable to type 'Top'.
!!! error TS2322:           'T' is assignable to the constraint of type 'Top', but 'Top' could be instantiated with a different subtype of constraint '{}'.
            }
        }
    }